# CXLAimPod

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ZH.md  __init__.py  bandwidth_data.csv  index.html  local_chat.py  optimize_performance.sh  optimized_local_chat.py  pcm_memory_parser.py  plot_bandwidth.py  print.html  searchindex.js  test_time_training.py
configs/: config.yaml
cpp_wrapper/: CMakeLists.txt  README.md  build.sh  setup.py
cpp_wrapper/cython/: cpuinfer.pxd  cpuinfer.pyx  kvcache.pxd  kvcache.pyx
cpp_wrapper/include/: cpuinfer.hpp  kvcache.hpp
cpp_wrapper/kvcache_cpp/: __init__.py
cpp_wrapper/src/: cpuinfer.cpp  kvcache.cpp
cpp_wrapper/test/: test_deepseek_moe.cpp  test_deepseek_moe_gguf.cpp  test_kvcache.cpp
doc/en/: DeepseekR1_V3_tutorial.md  FAQ.md  deepseek-v2-injection.md  injection_tutorial.md  multi-gpu-tutorial.md
ebpf/: Makefile  README.md  cxl_pmu.bpc.c  cxl_pmu.bpf.c  cxl_pmu_minimal.bpf.c  cxl_pmu_simple.bpf.c  cxl_rl.bpf.c  cxl_sched.c  vmlinux.h
en/: DeepseekR1_V3_tutorial.html  FAQ.html  deepseek-v2-injection.html  injection_tutorial.html  install.html  multi-gpu-tutorial.html
ktransformers/: local_chat.py
ktransformers/ktransformers_ext/cpu_backend/: cpuinfer.h
ktransformers/models/: modeling_deepseek_v3.py
ktransformers/operators/: attention.py  experts.py  linear.py
ktransformers/server/backend/interfaces/: ktransformers.py
ktransformers/util/: cuda_graph_runner.py  utils.py
microbench/: cxl_memory_test.cpp  double_bandwidth.cpp
models/: custom_cache.py  custom_modeling_deepseek_v2.py  custom_modeling_deepseek_v3.py  custom_modeling_glm4_moe.py  custom_modeling_qwen2_moe.py  custom_modeling_qwen3_moe.py  custom_modeling_smallthinker.py  modeling_deepseek.py  modeling_deepseek_v3.py  modeling_glm4_moe.py  modeling_llama.py  modeling_mixtral.py  modeling_qwen2_moe.py  modeling_qwen3_moe.py  modeling_smallthinker.py
operators/: RoPE.py  attention.py  balance_serve_attention.py  base_operator.py  cpuinfer.py  custom_attention_cxl.py  custom_cxl_modules.py  cxl_memory_manager.py  cxlaimpod.py  dynamic_attention.py  experts.py  flashinfer_batch_prefill_wrapper.py  flashinfer_wrapper.py  gate.py  layernorm.py  linear.py  mlp.py  models.py
optimize/: optimize.py
optimize/optimize_rules/: DeepSeek-V2-Chat-amx.yaml  DeepSeek-V2-Chat-multi-gpu-4.yaml  DeepSeek-V2-Chat-multi-gpu.yaml  DeepSeek-V2-Lite-Chat-multi-gpu.yaml  DeepSeek-V2-Lite-Chat.yaml  DeepSeek-V3-Chat-amx.yaml  DeepSeek-V3-Chat-cxlaimpod.yaml  DeepSeek-V3-Chat-multi-gpu-4-amx.yaml  DeepSeek-V3-Chat-multi-gpu-amx.yaml  DeepSeek-V3-Chat-multi-gpu.yaml  DeepSeek-V3-Chat.yaml  Glm4Moe-serve.yaml  Internlm2_5-7b-Chat-1m.yaml  Mixtral.yaml  Moonlight-16B-A3B-serve.yaml  Moonlight-16B-A3B.yaml  Qwen2-57B-A14B-Instruct-amx.yaml  Qwen2-57B-A14B-Instruct-multi-gpu.yaml  Qwen2-57B-A14B-Instruct.yaml  Qwen2-serve-amx.yaml  Qwen2-serve.yaml  Qwen3Moe-serve-amx.yaml  Qwen3Moe-serve.yaml  Smallthinker-serve.yaml
server/backend/interfaces/: transformers.py
server/balance_serve/inference/distributed/: parallel_state.py
server/config/: config.py
tests/: dequant_gpu.py
util/: cuda_graph_runner.py  custom_gguf.py  utils.py  vendors.py  weight_loader.py
